# graph-analyzer

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
conf/: GraphAnalyzer.conf  GraphAnalyzerTasks.xml  analyzer.conf  apache.conf  graph_analyzer_apache.conf
doc/: install.txt  uml_schema.xmi
scripts/: clear.sh  clearTmpGraphFiles.sh  install.sh
src/: CMakeLists.txt  debug.h  main.cpp  options.h  toolbox.cpp  toolbox.h  version.h
src/core/: AnalysisSystem.cpp  AnalysisSystem.h  CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  CoreSystem.cpp  CoreSystem.h  DatabaseManager.cpp  DatabaseManager.h  Dot.cpp  Dot.h  EmulationSystem.cpp  EmulationSystem.h  EmulationUnit.cpp  EmulationUnit.h  Experiment.cpp  Experiment.h  ExploitGroup.cpp  ExploitGroup.h  ExploitInfo.cpp  ExploitInfo.h  ExploitSample.cpp  ExploitSample.h  FileAnalyser.cpp  FileAnalyser.h  Graph.cpp  Graph.h  GraphAnalyzerPython.cpp  GroupManager.h  InstructionSplitter.cpp  InstructionSplitter.h  Options.cpp  Options.h  RPCTagResolver.cpp  RPCTagResolver.h  ShellcodeInfo.cpp  ShellcodeInfo.h  ShellcodeSample.cpp  ShellcodeSample.h  SystemLogger.cpp  (+8 more)
src/grouping/: CMakeLists.txt  GroupManager.h
src/gui/www/: .project  .pydevproject  manage.py
src/gui/www/analyze/: admin.py  models.py  views.py
src/gui/www/browse/: views.py
src/gui/www/feedback/: admin.py  models.py  views.py
src/gui/www/group/: admin.py  models.py  views.py
src/gui/www/home/: views.py
src/gui/www/options/: admin.py  forms.py  models.py  views.py
src/gui/www/tasks/: admin.py  models.py  views.py
src/gui/www/templates/: analyze.html  base.html  browse.html  browse_groups.html  compare_samples.html  create_task_analyze.html  create_task_export.html  create_task_group.html  feedback.html  group.html  home.html  list_samples.html  list_tasks_analyze.html  list_tasks_group.html  manage_tasks.html  options.html  show.html  show_group.html  show_sample.html  show_task_analyze.html  show_task_group.html
src/gui/www/tools/: AnalyzeTask.py  CoreOptions.py  DatabaseOptions.py  ExportTask.py  GroupTask.py  LoggingOptions.py  SystemStatus.py  TaskCollector.py  XMLParser.py
src/gui/www/www/: settings.py  urls.py
src/modules/: AbstractAnalyze.cpp  AbstractAnalyze.h  AbstractInput.cpp  AbstractInput.h  AbstractModule.cpp  AbstractModule.h  AbstractOutput.cpp  AbstractOutput.h  BinaryInput.cpp  BinaryInput.h  CMakeLists.txt  DecoderKey.cpp  LoopDetector.cpp  LoopDetector.h  ModuleInfo.h  ModuleManager.cpp  ModuleManager.h  SyscallAnalyze.cpp  SyscallAnalyze.h
src/modules/analyze/: AbstractAnalyze.cpp  AbstractAnalyze.h  CMakeLists.txt  DecoderKey.cpp  DecoderKey.h  GraphHash.cpp  GraphHash.h  LoopDetector.cpp  LoopDetector.h  SyscallAnalyze.cpp  SyscallAnalyze.h
src/modules/input/: AbstractInput.cpp  AbstractInput.h  BinaryInput.cpp  BinaryInput.h  CMakeLists.txt  PcapInput.cpp  PcapInput.h
src/modules/output/: AbstractOutput.cpp  AbstractOutput.h  CMakeLists.txt  ConsoleOutput.cpp  ConsoleOutput.h  DatabaseOutput.cpp  DatabaseOutput.h
src/tasks/: CMakeLists.txt  ITask.cpp  ITask.h  TaskManager.cpp  TaskManager.h  TaskQueue.cpp  TaskQueue.h  TaskResolver.cpp  TaskResolver.h
src/tasks/analyze/: AnalysisSystem.cpp  AnalysisSystem.h  AnalyzeTask.cpp  AnalyzeTask.h  CMakeLists.txt  EmulationSystem.cpp  EmulationSystem.h  EmulationUnit.cpp  EmulationUnit.h
src/tasks/analyze/modules/: CMakeLists.txt  IModule.h  ModuleManager.cpp  ModuleManager.h  ModulesManager.cpp  ModulesManager.h
src/tasks/analyze/modules/analyze/: CMakeLists.txt  GraphHash.cpp  GraphHash.h  IAnalyze.h  LoopDetector.cpp  LoopDetector.h  SyscallAnalyze.cpp  SyscallAnalyze.h
src/tasks/analyze/modules/input/: BinaryInput.cpp  BinaryInput.h  CMakeLists.txt  IInput.h  IndexFileInput.cpp  IndexFileInput.h  PcapInput.cpp  PcapInput.h
src/tasks/analyze/modules/output/: CMakeLists.txt  ConsoleOutput.cpp  ConsoleOutput.h  DatabaseOutput.cpp  DatabaseOutput.h  IOutput.h
src/tasks/export/: CMakeLists.txt  ExportTask.cpp  ExportTask.h
src/tasks/export/modules/: CMakeLists.txt  IModule.h  ModulesManager.cpp  ModulesManager.h
src/tasks/export/modules/output/: CMakeLists.txt  IOutput.h  SampleExportOutput.cpp  SampleExportOutput.h
src/tasks/group/: CMakeLists.txt  GroupManager.cpp  GroupManager.h  GroupTask.cpp  GroupTask.h
src/tasks/group/algorithms/: AlgorithmContext.cpp  AlgorithmContext.h  AlgorithmFactory.cpp  AlgorithmFactory.h  CMakeLists.txt  IAlgorithm.h  SymetricProbability.cpp  SymetricProbability.h
src/tasks/group/modules/: CMakeLists.txt  IModule.h  ModulesManager.cpp  ModulesManager.h
src/tasks/group/modules/algorithms/: AlgorithmContext.cpp  AlgorithmContext.h  AlgorithmFactory.cpp  AlgorithmFactory.h  CMakeLists.txt  IAlgorithm.h  SymetricProbability.cpp  SymetricProbability.h  SymetricSymilarity.cpp  SymetricSymilarity.h
src/tasks/group/modules/input/: CMakeLists.txt  DatabaseInput.cpp  DatabaseInput.h  IInput.h
src/tasks/group/modules/output/: CMakeLists.txt  ConsoleOutput.cpp  ConsoleOutput.h  DatabaseOutput.cpp  DatabaseOutput.h  IOutput.h
src/utils/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  DateRegExp.cpp  DateRegExp.h  DescriptionExportStrategy.cpp  DescriptionExportStrategy.h  FileTypeAnalyzer.cpp  FileTypeAnalyzer.h  IOptionsReader.h  InstructionSplitter.cpp  InstructionSplitter.h  LoggingStrategy.cpp  LoggingStrategy.h  StatusExportStrategy.cpp  StatusExportStrategy.h  SystemLogger.cpp  SystemLogger.h  Toolbox.cpp  Toolbox.h  UniqueNameResolver.cpp  UniqueNameResolver.h  XMLParser.cpp  XMLParser.h
web_gui/: .gitignore  .project  .pydevproject  manage.py
web_gui/analyze/: admin.py  forms.py  models.py  views.py
web_gui/browse/: views.py
web_gui/graph_analyzer/: admin.py  forms.py  models.py  views.py
web_gui/options/: admin.py  forms.py  models.py  views.py
web_gui/static/css/: style.css
web_gui/templates/: analyze.html  base.html  browse.html  browse_groups.html  feedback.html  home.html  options.html  show.html  show_group.html
web_gui/web_gui/: settings.py  urls.py  wsgi.py
(+1 files in other folders)
